$Id$

2006-06-06 Roy Hills <Roy.Hills@nta-monitor.com>

	* Changed web URLs to correspond with the new layout of the NTA
	  website.

2006-05-14 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c: Add --timestamp option.

	* isakmp.c: Improve decoding of notification payload.  Tony has found
	  an IKE implementation which returnes a notification payload after
	  the SA payload, and this uncovered shortcomings in the notification
	  processing code.

2006-05-12 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c: Allow --interval to be expressed in seconds by
	  appending "s" to the value.

	* ike-scan.c: Add experimental option to display packet received
	  time in %H:%M:%S.%u format before the packet details.

	* Moved ike-scan source code from CVS to SVN revision control.
	  This changes the revision numbers from 1.x, where x is a relatively
	  small number, to y, where y is a larger number (currently four
	  digits).

2006-05-05 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c: Delay opening the file specified by --writepkttofile
	  until after we've dropped SUID to avoid security issues.

2006-03-22 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c: Added --randomseed option, which allows the PRNG seed
	  to be specified.  This enables packets with payloads containing
	  random data, such as Key Exchange and Nonce, to be compared with
	  known good examples for testing.  It also allows the packet data to
	  be exactly repeatable, which can be useful in some situations.

2006-03-19 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c: Use unsigned 64-bit integer arithmetic for interval
	  calculation instead of double-precision floating point.  This
	  avoids the small rounding errors that can occur with floating point.

2006-03-14 Roy Hills <Roy.Hills@nta-monitor.com>

	* Moved ike-scan source code from RCS to CVS revision control.

2005-12-07 Roy Hills <Roy.Hills@nta-monitor.com>

	* Released v1.8  Tarball size: 1376995, Zip size: 2090803.